--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,52 @@
-<p>login works!</p>
+<!-- <div class="login-container"> -->
+    <mat-card class="login-card">
+      <h2 class="login-title">Login</h2>
+  
+      <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
+  
+        <mat-form-field appearance="outline" class="full-width">
+          <mat-label>Email</mat-label>
+          <input
+            matInput
+            type="email"
+            name="email"
+            ngModel
+            required
+            email
+            #email="ngModel"
+          />
+          <mat-error *ngIf="email.invalid && email.touched">
+            <span *ngIf="email.errors?.['required']">Email is required.</span>
+            <span *ngIf="email.errors?.['email']">Enter a valid email.</span>
+          </mat-error>
+        </mat-form-field>
+  
+        <mat-form-field appearance="outline" class="full-width">
+          <mat-label>Password</mat-label>
+          <input
+            matInput
+            type="password"
+            name="password"
+            ngModel
+            required
+            minlength="6"
+            #password="ngModel"
+          />
+          <mat-error *ngIf="password.invalid && password.touched">
+            <span *ngIf="password.errors?.['required']">Password is required.</span>
+            <span *ngIf="password.errors?.['minlength']">Minimum 6 characters.</span>
+          </mat-error>
+        </mat-form-field>
+  
+        <button
+          mat-raised-button
+          color="primary"
+          type="submit"
+          class="full-width"
+          [disabled]="loginForm.invalid"
+        >
+          Login
+        </button>
+      </form>
+    </mat-card>
+  <!-- </div> -->
