--- a/src/app/langing-page/langing-page.component.html
+++ b/src/app/langing-page/langing-page.component.html
@@ -31,8 +31,8 @@
       <h1>Welcome to Personal Knowledge Management System</h1>
       <p>Simple, secure and smart way to manage your digital life.</p>
       <div class="cta-buttons">
-        <a href="/auth/login" class="btn primary">Login</a>
-        <a href="/auth/register" class="btn secondary">Register</a>
+        <a  class="btn primary" (click)="openLogin()">Login</a>
+        <a  class="btn secondary" (click)="openRegister()">Register</a>
       </div>
     </div>
   </section>
